@@ -1,5 +1,11 @@
 2012-12-29 Riccardo Mottola <rm@gnu.org>
 
+	* DBProgress.m
+	* DBProgress.h
+	Time estimation.
+	
+2012-12-29 Riccardo Mottola <rm@gnu.org>
+
 	* AppController.m
 	Call progress reset before starting task.
 
